...
    };
    getOccupationList();
  }, []);

  const [selectedDate, setSelectedDate] = useState<Date>(new Date());
  return (
    <View className="" testID="complete_profile_step_1">
      <DateTimePicker2
        shouldMinus16Years
        selectedDate={selectedDate}
        setSelectedDate={handleDatePicked}
        setShowDateTimePicker={setShowDateTimePicker}
        showDateTimePicker={showDateTimePicker}
...
                              "Enter your first name"
                            }
                            placeholderTextColor={"rgba(0, 0, 0, 0.5)"}
                            onBlur={onBlur}
                            onChangeText={onChange}
                            value={value}
                            testID="complete_profile_step_1_name_input"
                          />
                          {errors.name && (
                            <View className="flex flex-row pt-2">
                              <Warning />
                              <Text
                                className="pl-1 text-sm font-normal text-red-500"
                                testID="complete_profile_step_1_name_error_message"
                              >
                                {errors.name.message}
                              </Text>
                            </View>
                          )}
                        </View>
...
                              "Enter your last name"
                            }
                            placeholderTextColor={"rgba(0, 0, 0, 0.5)"}
                            onBlur={onBlur}
                            onChangeText={onChange}
                            value={value}
                            testID="complete_profile_step_1_surname_input"
                          />
                          {errors.surname && (
                            <View className="flex flex-row pt-2">
                              <Warning />
                              <Text
                                className="pl-1 text-sm font-normal text-red-500"
                                testID="complete_profile_step_1_surname_error_message"
                              >
                                {errors.surname.message}
                              </Text>
                            </View>
                          )}
                        </View>
...
                        onChangeText={onChange}
                        value={value && dayjs(value).format("DD/MM/YYYY")}
                        // textAlignVertical="top"
                        editable={false}
                        onPress={() => setShowDateTimePicker(true)}
                        className="text-black-default"
                        testID="complete_profile_step_1_birthdate_input"
                      />
                      {errors.birth && !birth && (
                        <View className="flex flex-row pt-2">
                          <Warning />
                          <Text
                            className="pl-1 text-sm font-normal text-red-500"
                            testID="complete_profile_step_1_birthdate_input_error_message"
                          >
                            {errors?.birth?.message as string}
                          </Text>
                        </View>
                      )}
                    </View>
...
                        }
                        placeholderTextColor={"rgba(0, 0, 0, 0.5)"}
                        onBlur={onBlur}
                        onChangeText={onChange}
                        onPress={() => setShowOccupationPicker(true)}
                        value={value}
                        testID="complete_profile_step_1_occupation_input"
                      />
                      {errors.occupation && !occupation && (
                        <View className="flex flex-row pt-2">
                          <Warning />
                          <Text
                            className="pl-1 text-sm font-normal text-red-500"
                            testID="complete_profile_step_1_occupation_input_error_message"
                          >
                            {errors.occupation.message}
                          </Text>
                        </View>
                      )}
                    </View>
                  )}
                />
              </View>
              <Button
                testID="complete_profile_step_1_next_button"
                title={t("button.next") || "Next"}
                containerClassName="h-12 w-full bg-primary-default my-5 flex-none"
                textClassName="text-white text-md leading-6"
                onPress={handleSubmit(handleSubmitForm)}
              />
            </View>
...
