...
                    withBackIcon
                  />
                }
                rightBtn={
                  <View className="pr-2">
                    <NavButton
                      testID="complete_profile_step_2_skip_button"
                      text={t("button.skip") || "Skip"}
                      withIcon={false}
                      onPress={() => {
                        setVideo("");
                        setBiography("");
                        navigation.navigate("CompleteProfileStep3Screen");
...
            </ScreenWrapper>
          ),
          // headerTitle: () => <AppTitle title="Complete profile" />,

          // headerLeft: (props) => (
          //   <NavButton
          //     testID="complete_profile_step_2_back_button"
          //     text={t("button.back") || "Back"}
          //     withBackIcon={true}
          //     onPress={() => navigation.navigate("CompleteProfileStep1Screen")}
          //   />
          // ),

...
            </ScreenWrapper>
          ),
          // headerTitle: () => <AppTitle title="Complete profile" />,

          // headerLeft: (props) => (
          //   <NavButton
          //     testID="complete_profile_step_3_back_button"
          //     text={t("button.back") || "Back"}
          //     withBackIcon={true}
          //     onPress={() => navigation.goBack()}
          //   />
          // ),
        })}
...
            </ScreenWrapper>
          ),
          // headerTitle: () => <AppTitle title="Complete profile" />,

          // headerLeft: (props) => (
          //   <NavButton
          //     testID="complete_profile_step_4_back_button"
          //     text={t("button.back") || "Back"}
          //     withBackIcon={true}
          //     onPress={() => navigation.goBack()}
          //   />
          // ),
        })}
...
