...
                    itemKey="label"
                    open={openDropdown}
                    setValue={setValue}
                    items={fetchedSoftSkills}
                    setOpen={setOpenDropdown}
                    setItems={setFetchedSoftSkills}
                    testID="soft_skill_dropdown_picker"
                    dropDownDirection="BOTTOM"
                    listMode="SCROLLVIEW"
                    scrollViewProps={{
                      nestedScrollEnabled: true,
                    }}
                    placeholder={
...
                      <View>
                        {numberOfSkillError && (
                          <View className="flex flex-row items-center justify-start pt-2">
                            <WarningSvg />
                            <Text
                              className="pl-1 text-sm font-normal leading-5 text-red-500"
                              testID="complete_profile_step_4_error"
                            >
                              {t("form_onboarding.screen_4.error") ||
                                "Please select 3 soft skills."}
                            </Text>
                          </View>
                        )}
...
                  )}
                </View>
              </View>
            </View>
            {!openDropdown && (
              <Button
                testID="complete_profile_step_4_next_button"
                title={t("button.next") || "Next"}
                containerClassName=" bg-primary-default my-5 mx-5 flex-none"
                textClassName="text-white text-md leading-6"
                onPress={() => handleSubmitForm()}
              />
            )}
...
